@@ -1,0 +1,14 @@
+package data
+
+import io.realm.kotlin.types.RealmObject
+import io.realm.kotlin.types.annotations.PrimaryKey
+import org.mongodb.kbson.ObjectId
+
+class ToDoTask: RealmObject {
+    @PrimaryKey
+    var _id: ObjectId = ObjectId()
+    var title: String = ""
+    var description: String = ""
+    var favourite: Boolean = false
+    var completed: Boolean = false
+}
